--- a/index.html
+++ b/index.html
@@ -1,1 +1,12 @@
 
+<!DOCTYPE html>
+<html>
+<head>
+    <meta charset="UTF-8">
+    <title>stableworld Demo</title>
+</head>
+<body>
+    <h1>Welcome to stableworld</h1>
+    <p>This is the project page for DiverseAR.</p>
+</body>
+</html>
