--- a/index.html
+++ b/index.html
@@ -258,5 +258,14 @@
     </style>
 </head>
 
+
 <body>
 
+    <!-- ---------------- HERO ---------------- -->
+    <div class="hero">
+        <h1>StableWorld</h1>
+        <h2>StableWorld: Towards Stable and Consistent Long Interactive Video Generation</h2>
+
+
+</body>
+</html>
