--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             height: 100vh;
             width: 100%;
             padding: 0 20px;
-            background: url("stableworld_demo_2_01.png") center/cover no-repeat;
+            background: url("stableworld_demo_2_01(1).png") center/cover no-repeat;
             display: flex;
             flex-direction: column;
             justify-content: center;
