--- a/index.html
+++ b/index.html
@@ -1492,24 +1492,34 @@
   function buildCell(filename) {
     const cell = document.createElement("div");
     cell.className = "video-cell";
-
+  
     const v = document.createElement("video");
     v.autoplay = true;
     v.muted = true;
-    v.loop = true;
     v.playsInline = true;
-
-    // 如果你想稍微省流量，可以改成 metadata（但首帧更慢一点）
     v.preload = "auto";
-
+    v.loop = false; // 关键：别用原生 loop
+  
     const s = document.createElement("source");
     s.src = HF_BASE + encodeURIComponent(filename);
     s.type = "video/mp4";
-
     v.appendChild(s);
+  
+    // ✅ 只播前 30s
+    const LIMIT = 30;
+    v.addEventListener("timeupdate", () => {
+      // 给一点容错，避免反复触发抖动
+      if (v.currentTime >= LIMIT - 0.05) {
+        v.currentTime = 0;
+        // 有些浏览器跳回 0 后需要再次 play
+        if (v.paused) v.play().catch(() => {});
+      }
+    });
+  
     cell.appendChild(v);
     return cell;
   }
+
 
   document.addEventListener("DOMContentLoaded", () => {
     const rows = document.querySelectorAll("#videoWall .video-row");
