Update video demo section to use YouTube iframe
Replaced video element with YouTube iframe for video presentation.

--- a/index.html
+++ b/index.html
@@ -804,17 +804,21 @@
   <main class="main-content">
 
     <!-- Video Demo Section -->
-    <section class="section" id="video-demo">
-      <h2 class="section-title">Video Presentation</h2>
-      <div class="video-demo">
+<section class="section" id="video-demo">
+  <h2 class="section-title">Video Presentation</h2>
 
-        <video controls muted loop playsinline>
-          <source src="assets/videos/1.mp4" type="video/mp4">
-        </video>
-        <!-- <p class="video-caption">Skateboard</p> -->
-      </div>
+  <div class="video-demo">
+    <div class="video-container">
+      <iframe
+        src="https://www.youtube.com/embed/M9JIGIk9hEM?rel=0&modestbranding=1"
+        title="Video Presentation"
+        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+        allowfullscreen>
+      </iframe>
+    </div>
+  </div>
+</section>
 
-    </section>
 
     <!-- Abstract Section -->
     <section class="section" id="abstract">
