--- a/index.html
+++ b/index.html
@@ -843,7 +843,7 @@
   <h2 class="section-title">Overall Framework of StableWorld</h2>
 
   <iframe
-    src="https://raw.githubusercontent.com/Sd-World/Sd-World.github.io/main/overnew.pdf"
+    src="https://mozilla.github.io/pdf.js/web/viewer.html?file=https%3A%2F%2Fraw.githubusercontent.com%2FSd-World%2FSd-World.github.io%2Fmain%2Fovernew.pdf"
     style="width: 100%; height: 700px; border: none; margin-top: 1.5rem;"
   ></iframe>
 
@@ -853,6 +853,7 @@
     in interactive video generation.
   </p>
 </section>
+
 
 
 
