--- a/index.html
+++ b/index.html
@@ -842,12 +842,14 @@
 <section class="section" id="framework">
   <h2 class="section-title">Overall Framework of StableWorld</h2>
 
-  <iframe
-    src="https://mozilla.github.io/pdf.js/web/viewer.html?file=https%3A%2F%2Fraw.githubusercontent.com%2FSd-World%2FSd-World.github.io%2Fmain%2Fovernew.pdf"
-    style="width: 100%; height: 700px; border: none; margin-top: 1.5rem;"
-  ></iframe>
+  <img
+    src="assets/images/overnew.png"
+    alt="Overall Framework of StableWorld"
+    class="framework-image"
+    style="max-width: 95%; display:block; margin: 0 auto;"
+  />
 
-  <p class="image-caption" style="text-align: center; margin-top: 1rem;">
+  <p class="image-caption" style="text-align:center; margin-top:1rem;">
     StableWorld dynamically evicts degraded frames while retaining geometrically
     consistent frames to prevent cumulative drift and improve temporal stability
     in interactive video generation.
