--- a/index.html
+++ b/index.html
@@ -843,18 +843,19 @@
   <h2 class="section-title">Overall Framework of StableWorld</h2>
 
   <img
-    src="assets/images/overnew.png"
+    src="https://raw.githubusercontent.com/Sd-World/Sd-World.github.io/main/overnew_01.png"
     alt="Overall Framework of StableWorld"
     class="framework-image"
-    style="max-width: 95%; display:block; margin: 0 auto;"
+    style="max-width: 95%; display: block; margin: 0 auto;"
   />
 
-  <p class="image-caption" style="text-align:center; margin-top:1rem;">
+  <p class="image-caption" style="text-align: center; margin-top: 1rem;">
     StableWorld dynamically evicts degraded frames while retaining geometrically
     consistent frames to prevent cumulative drift and improve temporal stability
     in interactive video generation.
   </p>
 </section>
+
 
 
 
