Update section-title style with new after element
Replaced commented out section-title style with new after pseudo-element style.

--- a/index.html
+++ b/index.html
@@ -496,14 +496,17 @@
       text-align: center;
     }
 
-    /* 
-    .section-title::before {
-      content: '';
-      width: 4px;
-      height: 36px;
-      background: linear-gradient(180deg, var(--primary), var(--accent));
-      border-radius: 2px;
-    } */
+  .section-title::after {
+    content: "";
+    display: block;
+    width: 48px;
+    height: 3px;
+    margin: 12px auto 0;
+  
+    background: #e06c6c;   /* 你截图里的红线颜色 */
+    border-radius: 2px;
+  }
+
 
     /* Video Demo Section */
     .video-demo {
